[metadata]
name = dbnet
version = 0.1.0
description = DBNet Pytorch
long_description = file: README.md LICENSE
keywords = one, two
license = MIT License
classifiers =
    Development Status :: 1 - Planning
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
platforms = any



[options]
package = dbnet
packages = find:
install_requires =
    onnx==1.10.1
    onnxruntime==1.9.0
    torch==1.9.0
    torchvision==0.10.0 
    pytorch-lightning==1.4.8
    opencv-python==4.5.4.58
    opencv-python-headless==4.5.4.58
    fire==0.4.0
    Shapely==1.8.0
    scikit-image==0.17.2


include_package_data = True